--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
-/* CSS files add styling rules to your content */
-
-body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
-}
-
-h1 {
-  font-style: italic;
-  color: #373fff;
+ body {
+      background-color: #D0E4F5;
+      background-image: url("https://spacejam.com/img/bg_stars.gif");
+      background-repeat: repeat;
+      background-attachment: scroll;
+      background-position: 0 0;
+      font-family: helvetica, arial, sans-serif;
+      margin: 2em;
+      text-shadow: 2px 2px 4px #000000;
+      font-style: normal;
+      color: #ffffff;
+      text-align: center;
+    }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
