--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
       background-attachment: scroll;
       background-position: 0 0;
       font-family: "Comic Sans MS", sans-serif;
+      color: #ffffff
     }
 img {
   display: block;
