--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
       background-position: 0 0;
       font-family: "Comic Sans MS", sans-serif;
       color: #ffffff
+      text-align: center;
     }
 img {
   display: block;
