--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  body {
       background-color: #D0E4F5;
-      background-image: url("https://spacejam.com/img/bg_stars.gif");
+      background-image: url("stars2.gif");
       background-repeat: repeat;
       background-attachment: scroll;
       background-position: 0 0;
@@ -15,4 +15,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.inline-block {
+   display: inline-block;
 }
